[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "relezoo"
authors = [{name = "Luis Ferro", email = "luisedof10@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python= "~=3.8"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "ipython==7.26.0",
    "click==8.0.1",
    "hydra-core==1.1.1",
    "box2d==2.3.10",
    "box2d-py==2.3.8",
    "box2d-kengz==2.3.3",
    "gym==0.21.0",
    "pyglet==1.5.21",
    "moviepy==1.0.3",
    "tqdm==4.62.3",
    "aiohttp==3.7.4",
    "aioredis==1.3.1",
    "ray[default]==1.3.0",
    "tensorboard==2.6.0",
    "tensorboardX==2.2",
    "hydra-ray-launcher==1.1.0",
    "hydra-joblib-launcher==1.1.5",
    "hydra-ax-sweeper==1.1.5",
    "prometheus_client==0.13.1",
    "wandb==0.12.15",
    "kink==0.6.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mock",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-mypy",
    "flake8",
    "flake8-docstrings",
    "mypy"
]
doc = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Home = "https://github.com/Ohtar10/rele-zoo/tree/master/"
Documentation = "https://relezoo.readthedocs.io/en/latest/"
Source = "https://github.com/Ohtar10/rele-zoo/tree/master/"

[project.scripts]
relezoo = "relezoo.cli:relezoo"
relezoo-run = "relezoo.cli:hrelezoo"


